// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login matches snapshot displaying default text 1`] = `
<div
  className="wkp-login"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={0}
>
  <svg
    className="wkp-login-icon"
    focusable={false}
  >
    user_92_large.svg
  </svg>
  <span
    className="wkp-login-text"
  >
    Anmelden
  </span>
</div>
`;

exports[`Login matches snapshot displaying user name 1`] = `
<div
  className="wkp-login"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={0}
>
  <svg
    className="wkp-login-icon"
    focusable={false}
  >
    user_92_large.svg
  </svg>
  <span
    className="wkp-login-text"
  >
    bar
  </span>
</div>
`;
